<resources>
    <string name="app_name">Tidy</string>
    <string name="title_activity_home_screen">Home_screen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="assigned_tab">Assigned (</string>
    <string name="acknowledge_tab_tittle">Acknowledged (</string>
    <string name="inprogres_tittle">In Progress (</string>
    <string name="pulled_tab_tittle">Pulled (</string>
    <string name="changed_tab_tittle">Changed (</string>
    <string name="Shifted_tab_tittle">Shifted (</string>
    <string name="completed_tab_tittle">Completed (</string>
    <string name="canceled_tab_tittle">Cancelled (</string>
    <string name="invalid_username_password">Invalid Username or Password</string>
    <string name="please_wait">Please wait...</string>
    <string name="Login_tag">LOGIN</string>
    <string name="username_">Username</string>
    <string name="password__">Password</string>
    <string name="login__">Login</string>
    <string name="job_type__">Job Type</string>
    <string name="customer__">Customer :</string>
    <string name="additional_remarks_appears_here__">Additional remarks appears here</string>
    <string name="additional_charges_selected__">Additional Charges selected :</string>
    <string name="step_1__">Step 1</string>
    <string name="person_in_charge__">Person in Charge</string>
    <string name="contact_number__">Contact Number</string>
    <string name="site_address__">Site Address</string>
    <string name="bin_type__">Bin type</string>
    <string name="waste_type__">Waste Type</string>
    <string name="remarks__">Remarks</string>
    <string name="step_2__">Step 2</string>
    <string name="person_in_charge___">Person in Charge</string>
    <string name="contact_number___">Contact Number</string>
    <string name="yard_address___">Yard Address</string>
    <string name="bin_type___">Bin type</string>
    <string name="waste_type___">Waste Type</string>
    <string name="remarks___">Remarks</string>
    <string name="acknowledge___">Acknowledge</string>
    <string name="collection_method__">Collection Method</string>
    <string name="amount_collected___">Amount Collected</string>
    <string name="driver_notes___">Driver Notes</string>
    <string name="completed_time___">Completed Time</string>
    <string name="signature___">Signature</string>
    <string name="uploaded_photo___">Uploaded Photo</string>
    <string name="signed_by___">Signed By</string>
    <string name="rating___">Rating</string>
    <string name="driver_notes______">Driver Notes</string>
    <string name="completed_time____">Completed Time</string>
    <string name="signature____">Signature</string>
    <string name="uploaded_photo____">Uploaded Photo</string>
    <string name="signed_by____">Signed By</string>
    <string name="job_no__">Job no:</string>
    <string name="bin_waste_type____">Bin/Waste type</string>
    <string name="bin_number__">Bin number</string>
    <string name="additional_charges___">Additional Charges</string>
    <string name="payment_collected___">Payment Collected</string>
    <string name="collection_method____">Collection Method</string>
    <string name="amount_collected____">Amount Collected</string>
    <string name="picture__">Picture</string>
    <string name="signed_by_____">Signed By</string>
    <string name="rating_FEEDBACK">Rating</string>
    <string name="driver_s_notes_feedbck">Driver\'s Notes</string>
    <string name="Acknowledge_button_status">Acknowledge</string>
    <string name="Start_staus_button">Start</string>
    <string name="Btn_chnaged_status">Changed</string>
    <string name="Btn_pulled_status">Pulled</string>
    <string name="btn_completed_status">Completed</string>
    <string name="Btn_shifted_statuss">Shifted</string>
    <string name="Btn_completed_status">Completed</string>

    <string name="jobs_menu">Jobs</string>
    <string name="alerts_menu">Alerts</string>
    <string name="about_menu">About</string>
    <string name="logout_menu">Logout</string>
    <string name="select_collectionm_feed">Select Collection method</string>
    <string name="Select_Binwaste_type__">Select Bin/waste type</string>
    <string name="bin_toast">Bin number cannot be empty</string>
    <string name="first_character_toast">First Character of Bin number should start from</string>
    <string name="collection_toast">Select Collection method</string>
    <string name="Amount_toast">Amount collected cannot be empty</string>
    <string name="image_toast">Picture cannot be empty</string>
    <string name="signed_by_toast">Signed By cannot be empty</string>
    <string name="driver_toast">Driver notes cannot be empty</string>
    <string name="submit___">Submit</string>
</resources>
