<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/list"
            android:title="@string/jobs_menu" />
        <item
            android:id="@+id/alerts"
            android:icon="@drawable/ic_alert"
            android:title="@string/alerts_menu" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/about"
            android:title="@string/about_menu" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/whitelogout"
            android:title="@string/logout_menu" />

    </group>

</menu>
